--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -2,3 +2,44 @@
     text-align: center;
     width: 100vw;
 }
+
+#dashboard-container {
+    padding: 0px 60px;
+    display: flex;
+    gap: 160px;
+}
+
+.dashboard-chart-container {
+    display: flex;
+    align-items: center;
+}
+
+.profile-info-container {
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+}
+
+.profile-demographic-img {
+    width: 275px;
+    border-radius: 25px;
+}
+
+.profile-demographic-info-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 300px;
+    height: 240px;
+    color: black;
+    background-color: white;
+    padding: 5px 10px;
+    border-radius: 25px;
+}
+
+.profile-demographic-info-container p {
+    font-size: 24px;
+    margin: 10px 0px 10px 25px;
+}
