--- a/src/pages/ProfileCreationPages/CreationPage1/CreationPage1.css
+++ b/src/pages/ProfileCreationPages/CreationPage1/CreationPage1.css
@@ -1,11 +1,13 @@
 .container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 80vh;
+    width: 100vw;
 }
 
-.creation-profile-body1 {
+.creation-profile-container1 {
     display: grid;
     width: 100%;
     grid-template-columns: 1fr 1fr 1fr;
@@ -28,6 +30,35 @@ input[type=text], input[type=number], select {
 }
 
 select option {
+    color: black;
+}
+
+.profile-navigation-body {
+    position: absolute;
+    bottom: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    gap: 30px;
+}
+
+.navigation-profile-page-button {
+    color: black;
+    width: 390px;
+    height: 90px;
+    border-radius: 25px;
+    background-color: #D9D9D9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navigation-profile-page-button p {
+    font-size: 32px;
+
+}
+
+.navigation-profile-page-button:hover {
     color: black;
 }
 
