--- a/src/components/MealPlanner/MealPlanner.css
+++ b/src/components/MealPlanner/MealPlanner.css
@@ -10,6 +10,19 @@
     margin-bottom: 100px;
 }
 
-.search-button-body input {
+.search-input-body {
+    background-color: white;
+    box-shadow: 0px 0px 8px #ddd;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2.5rem;
+    border-radius: 10px;
     margin-bottom: 30px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
