--- a/src/components/Recipes/Recipes.css
+++ b/src/components/Recipes/Recipes.css
@@ -5,11 +5,11 @@
 }
 
 .search-bar-container {
-    padding-top: 20vh;
     width: 40%;
-    margin: auto;
+    margin: 0px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     min-width: 200px;
+    min-height: 100px;
 }
