--- a/src/pages/ProfileCreationPages/CreationPage2/CreationPage2.css
+++ b/src/pages/ProfileCreationPages/CreationPage2/CreationPage2.css
@@ -1,6 +1,7 @@
 .weight-loss-button-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 20px;
 }
 
@@ -13,6 +14,10 @@
     background-color: #D9D9D9;
     border-radius: 20px;
     color: black;
+}
+
+.weight-loss-button.active {
+    border: 5px solid white;
 }
 
 .weight-loss-button p {
