--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,18 @@
 #root {
   box-sizing: border-box;
+  font-family: "Roboto Condensed", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 
-.content {
-  padding-top: 100px;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  min-height: 100vh;
+  background-color: #254332;
 }
 
 input {
