--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,17 +1,117 @@
-.main-dashboard-header {
-    text-align: center;
+#dashboard-container {
+    display: flex;
     width: 100vw;
 }
 
-#dashboard-container {
-    padding: 0px 60px;
-    display: flex;
-    gap: 160px;
+.cover-container {
+    width: 100vw;
+    height: 200px;
 }
 
+#cover-img {
+    width: 100vw;
+    height: 100%;
+}
+
+#profile-info-container {
+    height: 100px;
+    background-color: #FEB6B6;
+    display: flex;
+    align-items: center;
+}
+
+#profile-info-container p {
+    margin: 0px 0px 0px 150px;
+
+}
+
+#profile-img {
+    height: 180px;
+    width: 180px;
+    border-radius: 50%;
+    border: 4px solid white;
+    position: relative;
+    left: 100px;
+    bottom: 60px;
+}
+
+#profile-name {
+    font-size: 22px;
+    margin-bottom: 20px;
+}
+
+#profile-email {
+    font-size: 18px;
+}
+
+#dashboard-container {
+    display: flex;
+    height: 600px;
+}
+
+#dashboard-info-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 30vw;
+    border-right: 1px solid black;
+}
+
+#dashboard-info-container p {
+    color: white;
+}
+
+.dashboard-info-title {
+    font-size: 24px;
+}
+
+.dashboard-button-container {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    cursor: pointer;
+}
+
+.dashboard-button-container img {
+    height: 34px;
+    width: 34px;
+    margin-right: 20px;
+}
+
+#dashboard-chart-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 70vw;
+}
+
+#dashboard-chart-title {
+    display: flex;
+    align-items: center;
+    font-size: 24px;
+    color: white;
+    gap: 35px;
+}
+
+#dashboard-chart-title select {
+    width: 150px;
+    height: 50px;
+    border-radius: 20px;
+    font-size: 24px;
+    font-family: "Roboto Condensed", sans-serif;
+}
+
+/* 
 .dashboard-chart-container {
     display: flex;
     align-items: center;
+    flex-direction: column;
+}
+
+.calorie-limit-container {
+    display: grid;
 }
 
 .profile-info-container {
@@ -42,4 +142,4 @@
 .profile-demographic-info-container p {
     font-size: 24px;
     margin: 10px 0px 10px 25px;
-}
+} */
