--- a/src/components/Inventory/Inventory.css
+++ b/src/components/Inventory/Inventory.css
@@ -1,4 +1,7 @@
 .main-inventory-header {
     text-align: center;
     width: 100vw;
+    margin-top: 100px;
+    margin-bottom: 75px;
+    color: white;
 }
