--- a/src/components/MealPlanner/MealList/MealList.css
+++ b/src/components/MealPlanner/MealList/MealList.css
@@ -7,12 +7,14 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 50px;
+    color: white;
 }
 
 .meal-plan-macros {
     list-style-type: none;
     display: flex;
     justify-content: center;
+    color: white;
 }
 
 .meal-plan-macros li {
@@ -23,4 +25,5 @@
     display: grid;
     justify-items: center;
     grid-template-columns: 1fr 1fr 1fr;
+    gap: 30px;
 }
