--- a/src/components/MealPlanner/MealPlanner.css
+++ b/src/components/MealPlanner/MealPlanner.css
@@ -1,6 +1,9 @@
 .main-mealplanner-header {
     text-align: center;
     width: 100vw;
+    margin-top: 100px;
+    margin-bottom: 75px;
+    color: white;
 }
 
 .search-button-body {
