--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,17 +2,34 @@
     display: flex;
     padding: 0px 20px;
     justify-content: space-between;
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     right: 0;
-    border-bottom: 1px solid black;
-    background-color: #242424;
+    background-color: #282424;
     z-index: 1000;
 }
 
+#navbar a {
+    text-decoration: none;
+}
+
 #navbar-brand-body {
-    
+    color: white;
+    display: flex;
+    align-items: center;
+    height: 60px;
+}
+
+#navbar-brand {
+    height: 54px;
+    width: 54px;
+    margin-right: 20px;
+}
+
+#navbar-brand-body p {
+    font-size: 26px;
+    text-decoration-line: none;
 }
 
 #navbar-link-body {
@@ -24,5 +41,6 @@
 
 #navbar-link-body p {
     padding: 0 10px 0 10px;
+    font-size: 20px;
     color: white;
 }
