--- a/src/components/Profiles/Profiles.css
+++ b/src/components/Profiles/Profiles.css
@@ -1,6 +1,8 @@
 .main-profiles-header {
     text-align: center;
     width: 100vw;
+    margin-top: 100px;
+    color: white;
 }
 
 .profile-list-body {
@@ -16,6 +18,7 @@
     height: 224px;
     text-align: center;
     color: white;
+    text-decoration: none;
 }
 
 .profile:hover {
@@ -33,6 +36,7 @@
     height: 224px;
     text-align: center;
     color: white;
+    text-decoration: none;
 }
 
 .create-profile-button:hover {
