--- a/src/pages/ProfileCreationPages/CreationPage1/CreationPage1.css
+++ b/src/pages/ProfileCreationPages/CreationPage1/CreationPage1.css
@@ -1,11 +1,3 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 80vh;
-    width: 100vw;
-}
-
 .creation-profile-container1 {
     display: grid;
     width: 100%;
@@ -73,3 +65,6 @@ select option {
     color: black;
 }
 
+label p {
+    text-align: center;
+}
