--- a/src/components/MealPlanner/MealPlanner.css
+++ b/src/components/MealPlanner/MealPlanner.css
@@ -24,6 +24,14 @@
     margin-bottom: 30px;
 }
 
+#fetchMealDataButton {
+    font-family: "Roboto Condensed", sans-serif;
+    width: 250px;
+    font-size: 24px;
+    border-radius: 20px;
+    border: 0px;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
