--- a/src/pages/ProfileCreationPages/CreationPage2/CreationPage2.css
+++ b/src/pages/ProfileCreationPages/CreationPage2/CreationPage2.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    cursor: pointer;
 }
 
 .weight-loss-button {
@@ -23,3 +24,5 @@
 .weight-loss-button p {
     font-size: 32px;
 }
+
+
