--- a/src/components/Authentication/Authentication.css
+++ b/src/components/Authentication/Authentication.css
@@ -10,10 +10,13 @@
 #logo-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 #logo {
-   margin: auto 0;
+    width: 134px;
+    height: 134px;
+    margin: auto 0;
 }
 
 #logo-text {
