--- a/src/components/Authentication/Authentication.css
+++ b/src/components/Authentication/Authentication.css
@@ -5,18 +5,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 #logo-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 40px;
 }
 
 #logo {
     width: 134px;
     height: 134px;
-    margin: auto 0;
+    margin-bottom: 10px;
 }
 
 #logo-text {
@@ -40,4 +42,5 @@
     height: 42px;
     width: 210px;
     border-radius: 20px;
+    margin-top: 20px;
 }
